kubernetes/main/apps/security/tinyauth/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tinyauth
  namespace: security
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tinyauth
  ingress:
    # forwardAuth from both traefik instances
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    # pocket-id OIDC via its ingress hostname hairpins traefik
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
